# collabserver-datatypes

./: .clang-format  .gitignore  .todo  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.sh
CMake/: AddCompilerFlags.cmake  AddCustom.cmake  AddDependencies.cmake  AddExamples.cmake  AddTests.cmake
CMake/Dependencies/: AddGoogleTest.cmake  AddMsgPack.cmake
CMake/ExternalProjects/: GoogleTest.cmake  MsgPack.cmake
examples/: Makefile  main.cpp  runAllExamplesCvRDT.cpp
examples/CmRDT/: Example_LWWGraph.h  Example_LWWMap.h  Example_LWWSet.h  LWWGraph_Example.h  LWWMap_Example.h  LWWRegister_Example.h  LWWSet_Example.h  runAllExamples.cpp
examples/CvRDT/: 2PSet_Example.h  Example_2PSet.h  Example_GCounter.h  Example_GGraph.h  Example_GMap.h  Example_GSet.h  Example_LWWRegister.h  Example_PNCounter.h  GCounter_Example.h  GGraph_Example.h  GMap_Example.h  GSet_Example.h  LWWRegister_Example.h  PNCounter_Example.h  runAllExamples.cpp
examples/collab/: LWWViewMDE_Example.h
examples/custom/: Example_SimpleGraph.h  runAllExamples.cpp
include/CmRDT/: LWWGraph.h  LWWMap.h  LWWRegister.h  LWWSet.h
include/CvRDT/: 2PSet.h  GCounter.h  GGraph.h  GMap.h  GSet.h  LWWRegister.h  PNCounter.h
include/collab/: LWWViewMDE.h
include/collab/CmRDT/: LWWGraph.h  LWWMap.h  LWWRegister.h  LWWSet.h
include/collab/CvRDT/: GGraph.h  GSet.h  PNCounter.h
include/collab/custom/: LWWViewMDE.h
include/collab/data/: CollabData.h  CollabInstance.h  Operation.h  OperationObserver.h  Timestamp.h  ViewMDE.h  ViewMDE_Operations.h
include/collabdata/CmRDT/: LWWGraph.h  LWWMap.h  LWWRegister.h  LWWSet.h
include/collabdata/CvRDT/: 2PSet.h  GCounter.h  GGraph.h  GMap.h  GSet.h  LWWRegister.h  PNCounter.h
include/collabdata/custom/: CollabData.h  Operation.h  OperationHandler.h  OperationObserver.h  OperationVisitor.h  SimpleGraph.h  Timestamp.h
include/collabdata/utils/: CollabData.h  Operation.h  OperationObserver.h  ViewMDE.h
include/collabserver/data/CmRDT/: LWWGraph.h  LWWMap.h  LWWRegister.h  LWWSet.h
include/collabserver/data/collabdata/: CollabData.h  CollabDataOperationHandler.h  Operation.h  OperationHandler.h  OperationObserver.h
include/collabserver/datatypes/CmRDT/: LWWGraph.h  LWWSet.h
include/collabserver/datatypes/collabdata/: CollabDataOperation.h  CollabDataOperationObserver.h
src/custom/: SimpleGraph.cpp  SimpleGraph_Iterators.cpp  SimpleGraph_Operations.cpp  Timestamp.cpp
test/: runAllTests.cpp
test/CmRDT/: Test_LWWGraph.cpp  Test_LWWMap.cpp  Test_LWWRegister.cpp  Test_LWWSet.cpp
test/custom/: Test_CollabData.cpp  Test_SimpleGraph.cpp  Test_SimpleGraph_Operations.cpp  Test_Timestamp.cpp
test/data/: Test_Timestamp.cpp  Test_ViewMDE.cpp
test/utils/: Test_CollabData.cpp  Test_Timestamp.cpp  Test_ViewMDE.cpp
tests/: CMakeLists.txt  runAllTests.cpp
tests/CmRDT/: Test_LWWGraph.cpp  Test_LWWMap.cpp  Test_LWWRegister.cpp  Test_LWWSet.cpp
tests/collabdata/: Test_CollabData.cpp
